src-tauri/bundle/test_err.txt
file:///C:/Users/Bobby/Bobbys-Workshop-/src-tauri/bundle/resources/server/index.js:1744
  const lockResult = await acquireDeviceLock(deviceSerial, operation);
                     ^^^^^

SyntaxError: Unexpected reserved word
    at compileSourceTextModule (node:internal/modules/esm/utils:305:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at #translate (node:internal/modules/esm/loader:467:20)
    at afterLoad (node:internal/modules/esm/loader:523:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:528:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:565:36)
    at afterResolve (node:internal/modules/esm/loader:618:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:624:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:643:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v25.2.1
